--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ p{
     text-align: center;
     margin-top: 50px;
 }
+div{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+   
+}
